--- a/TicTacToeProject/Pages/Tictactoe.razor
+++ b/TicTacToeProject/Pages/Tictactoe.razor
@@ -3,6 +3,7 @@
 
 <div class="centerer">
     <div class="toBeCentered">
+
         @if (tictactoe.PlayerChosenShape.Equals(Shape.None))
         {
 
@@ -21,19 +22,21 @@
         }
         else
         {
-            <div style="position: fixed;">
+
                 @if (!WinMessage.Equals(String.Empty))
                 {
 
-                        <p class="alert alert-success">@WinMessage</p>
+                        <p class="alert alert-success winMessage">@WinMessage</p>
 
                     
                 }
 
 
-
+                <div>
                 @if (!gameHasStarted){
-                    <button class="btn btn-primary" @onclick="StartGame">Start Game</button>
+                    <div class="startButton">
+                        <button class="btn btn-primary" @onclick="StartGame">Start Game</button>
+                    </div>
                 } else {
                     @for (int y = 0; y < 3; y++)
                     {
@@ -56,7 +59,7 @@
                                     @*Vars above are needed since the lambda function below only uses the last index of x and y instead of the current
                                         one (3, 3) instead of (0, 0), (0, 1), (0, 2)...*@
                                     int currentPos = j * 3 + i;
-                                    <button class="equalButton" @onclick="@(() => SetGivenPos(@currentPos))"><img class="shape" width="64" height="64"
+                                    <button class="equalButton tictactoefield" @onclick="@(() => SetGivenPos(@currentPos))"><img class="shape" width="64" height="64"
                         src="https://www.publicdomainpictures.net/pictures/40000/velka/white-paper-background.jpg"></button>
                                     break;
                             }
@@ -65,6 +68,8 @@
                         <br>
                     }
                 }
+
+                </div>
 
                 <br>
 
@@ -75,9 +80,11 @@
 
                 <br>
                 <br>
-                <a href="../" @onclick="SetLocalStorage"><button class="btn btn-warning">Go Back</button></a>
-                <button class="btn btn-danger" @onclick="RefreshPage">Play Again</button>
-            </div>
+                <div class="endButtons">
+                    <a href="../" @onclick="SetLocalStorage"><button class="btn btn-warning goBackButton">Go Back</button></a>
+                    <div class="divider"></div>
+                    <button class="btn btn-danger playAgainButton" @onclick="RefreshPage">Play Again</button>
+                </div>
         }
     </div>
 </div>
