--- a/TicTacToeProject/wwwroot/css/site.css
+++ b/TicTacToeProject/wwwroot/css/site.css
@@ -32,7 +32,17 @@ input {
 
 .winMessage {
     font-size: 1.6rem;
-    color: rgb(33, 211, 33)
+    color: rgb(33, 211, 33);
+    text-align: center;
+}
+
+.startButton {
+    position: relative;
+}
+
+.startButton > button {
+    position: absolute;
+    left: 27%;
 }
 
 .equalButton {
@@ -65,7 +75,26 @@ input {
     margin-right: auto 
 }
 
-button:focus {
+/*.goBackButton {
+
+}
+
+.endButtons {
+
+}
+
+.playAgainButton {
+
+}
+*/
+
+.divider {
+    width:66px;
+    height:auto;
+    display:inline-block;
+}
+
+.tictactoefield:focus {
     background-color: black ;
 }
 
