--- a/TicTacToeProject/Pages/Index.razor
+++ b/TicTacToeProject/Pages/Index.razor
@@ -1,5 +1,8 @@
 @page "/"
 
+
 <h1>Hello, planet!</h1>
 <SurveyPrompt Title="How is Blazor not working for you?" />
-<Score/>
+<Score />
+<br>
+<GameResumer/>
