--- a/TicTacToeProject/Pages/GameResumer.razor
+++ b/TicTacToeProject/Pages/GameResumer.razor
@@ -1,26 +1,16 @@
 @inject GameStateService GameStateService;
-@try
-{
-    if (!GameStateService.AcquireGameState().Equals(null))
+
+    @if (GameStateService.AcquireGameState() != null)
     {
         <p>You have an unfinished Game, want to start a new Game or resume it?</p>
         <button class="btn btn-success" @onclick="Resume">Resume</button>
         <button class="btn btn-success" @onclick="NewGame">New Game</button>
-    }
-}
-catch (System.NullReferenceException)
-{
 
-}
-
-@code {
-    public void Resume()
-    {
-        //TODO: implement currrentstate tictactoe values into current object and then switch to Tictactoe.razor
+        if(shouldBeResumed)
+        {
+            <Tictactoe
+                Tictactoegame="@tictactoe"
+            ></Tictactoe>
+        }
     }
 
-    public void NewGame()
-    {
-        GameStateService.RemoveGameState();
-    }
-}
