--- a/TicTacToeProject/Pages/GameResumer.razor
+++ b/TicTacToeProject/Pages/GameResumer.razor
@@ -1,4 +1,5 @@
 @inject GameStateService GameStateService;
+@inject NavigationManager uriHelper;
 
     @if (GameStateService.AcquireGameState() != null)
     {
@@ -6,11 +7,11 @@
         <button class="btn btn-success" @onclick="Resume">Resume</button>
         <button class="btn btn-success" @onclick="NewGame">New Game</button>
 
-        if(shouldBeResumed)
+        @*if(shouldBeResumed)
         {
             <Tictactoe
                 Tictactoegame="@tictactoe"
             ></Tictactoe>
-        }
+        }*@
     }
 
