final commit before bunit config

--- a/TicTacToeProject/Pages/Tictactoe.razor
+++ b/TicTacToeProject/Pages/Tictactoe.razor
@@ -29,13 +29,12 @@
         }
         else
         {
-                this.SetWinMessage();
-                @if (!WinMessage.Equals(String.Empty))
+                this.CheckGameEnding();
+                @if (gameHasEnded)
                 {
                     GameStateService.RemoveGameState();
                     <p class="alert alert-success winMessage">@WinMessage</p>
                     WinMessage = String.Empty;
-                    gameHasEnded = true;
                     <Score/>
                 }
 
