tictactoe tests added

--- a/TicTacToeProject/Pages/Tictactoe.razor
+++ b/TicTacToeProject/Pages/Tictactoe.razor
@@ -20,11 +20,11 @@
             <div>
                 <img width="64" src="https://upload.wikimedia.org/wikipedia/commons/f/f8/X_G.png"
                 alt="Letter X representing cross shape">
-                <button class="btn-primary" @onclick="ChooseCross">Choose Cross</button>
+                <button class="btn-primary cross" @onclick="ChooseCross">Choose Cross</button>
             </div>
             <div>
                 <img width="64" src="https://www.vhv.rs/file/max/20/201990_red-circle-png.png" alt="circle shape">
-                <button class="btn-primary" @onclick="ChooseCircle">Choose Circle</button>
+                <button class="btn-primary circle" @onclick="ChooseCircle">Choose Circle</button>
             </div>
         }
         else
