--- a/TicTacToeProject/Shared/NavMenu.razor
+++ b/TicTacToeProject/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> TicTacToe
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/counter" Match="NavLinkMatch.All">
+                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            </NavLink>
+        </li>
     </ul>
 </div>
 
